# api-gui-app-project-adam-ainsworth

./: pyproject.toml
src/api_gui_app_project_adam_ainsworth/: app.py  controller.py  results.py  start.py  trivia.py
