[project]
name = "api-gui-app-project-adam-ainsworth"
version = "0.1.0"
description = ""
authors = [
    {name = "AdamAinsworthCHS",email = "147109448+AdamAinsworthCHS@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pyside6 (>=6.10.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "api_gui_app_project_adam_ainsworth", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
